[tool.black]
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["src/"]
testpaths = "tests"
asyncio_mode = "auto"
markers = [
    "APP_PORT: Sets the APP_PORT env variable variable at test startup",
    "SERVER_URL: Sets the SERVER_URL env variable variable at test startup",
    "MOUNT_POINT: Sets the MOUNT_POINT env variable variable at test startup",
    "MAX_IDLE_DURATION_SECONDS: Sets the MAX_IDLE_DURATION_SECONDS env variable variable at test startup",
    "MAX_DURATION_SECONDS: Sets the MAX_DURATION_SECONDS env variable variable at test startup",
    "MAX_ACTIVE_ENDPOINTS: Sets the MAX_ACTIVE_ENDPOINTS env variable variable at test startup",
    "MAX_ENDPOINT_NOTIFICATIONS: Sets the MAX_ENDPOINT_NOTIFICATIONS env variable variable at test startup",
    "CLEANUP_FREQUENCY_SECONDS: Sets the CLEANUP_FREQUENCY_SECONDS env variable variable at test startup",
]


[tool.isort]
profile = "black"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.mypy]
exclude = ["tests", "build"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
namespace_packages = true
warn_redundant_casts = true
warn_unused_ignores = true


[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cactus_client"
dynamic = ["version", "readme"]
description = "Schema and mini webserver for accepting CSIP-Aus subscription notifications via dynamic webhook URIs."
dependencies = [
    "dataclass-wizard>=0.35.0,<1",

] # These dependencies are purely for the schema (the default reference). Server dependencies require "server"

[project.optional-dependencies]
server = ["aiohttp>=3.11.12,<4"]
dev = ["bandit", "black", "coverage", "flake8", "flake8-bugbear", "mypy"]
test = ["assertical", "pytest", "pytest-asyncio", "pytest-aiohttp", "freezegun"]

[tool.setuptools.package-data]
"cactus_client_notifications" = ["py.typed", "**/*.xsd"]

[tool.setuptools.dynamic]
version = { attr = "cactus_client_notifications.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }
